--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,10 @@
 main{
   width:  100%;
   padding: 20px;
-  background-color: #C0C0C0;
+  background-color: #C0c0c0;
 }
 .sidebar{
-  background-color:	#00008B;
+  background-color:	#010326;
   color: #fff;
   height: 100vh;
   width: 250px;
@@ -41,13 +41,13 @@ main{
   transition: all 0.5s;
 }
 .link:hover{
-  background-color: #4682B4;
-  color: 		#00008B;
+  background-color: #010326;
+  color:#4C5D73;
   transition: all 0.5s;
 }
 .active{
-  background-color:#4682B4;
-  color: 	#00008B;
+  background-color:#4C5D73;
+  color:#010326;
 }
 .icon, .link_text{
   font-size: 20px;
