--- a/src/App.css
+++ b/src/App.css
@@ -2,29 +2,44 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+
 }
 .container{
   display: flex;
 }
 main{
-  width:  100%;
+  background-color: var(--body_background);
+  width: 100%;
   padding: 20px;
-  padding-bottom: 0px;
+  position: relative;
+  color: var(--color);
 }
-.sidebar{
-  background-color:#DC143C;
-  color: #fff;
+[data-theme="dark"] .sidebar{
+  background-color: var(--body_background);
+  color: var(--body_color);
   height: 100vh;
   width: 250px;
   transition: all 0.5s;
+  box-shadow: var(--box_shadow);
+  z-index: 1; 
+  position: relative;
 }
+
+.sidebar{
+  background-color: var(--body_background);
+  color: var(--body_color);
+  height: 100vh;
+  width: 250px;
+  transition: all 0.5s;
+  box-shadow: var(--box_shadow);
+  z-index: 1; 
+  position: relative;
+}
+
 .top_section{
   display: flex;
   align-items: center ;
   padding: 20px 15px;
-}
-.logo{
-  font-size: 30px;
 }
 .bars{
   display: flex;
@@ -33,21 +48,102 @@ main{
 }
 .link{
   display: flex;
-  color: #fff;
+  color: var(--link_color);
   padding: 10px 15px;
   gap: 15px;
   transition: all 0.5s;
 }
-.link:hover{
-  background-color: #C0C0C0;
-  color: 		#DC143C;
+
+[data-theme="dark"] .link:hover{
+  background-color: #fff;
+  color: 		#75787e;
   transition: all 0.5s;
 }
+.link:hover{
+  background-color: black;
+  color: rgba(232, 222, 222, 0.916);
+  transition: all 0.5s;
+}
+[data-theme="dark"] .active{
+  background-color:#fff;
+  color: black;
+}
+
 .active{
-  background-color:#C0C0C0;
-  color: 	#DC143C;
+  background-color:black;
+  color: #fff;
 }
 .icon, .link_text{
   font-size: 20px;
   
+}
+/* DarkTheme*/
+
+.dark_mode {
+  margin-top: -20px;
+  margin-left: 10px;  
+}
+
+.dark_mode_label {
+  width: 45px;
+  height: 20px;
+  position: relative;
+  display: flex;
+  background: #ebebeb;
+  border-radius: 200px;
+  box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
+      inset 0px -5px 15px rgba(255, 255, 255, 0.4);
+  cursor: pointer;
+  transition: 0.3s;
+}
+.dark_mode_label:after {
+  content: "";
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  background: linear-gradient(180deg,black,black);
+  border-radius: 180px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+.dark_mode_input {
+  width: 0;
+  height: 0;
+  visibility: hidden;
+}
+.dark_mode_input:checked + .dark_mode_label {
+  background: #242424;
+}
+.dark_mode_input:checked + .dark_mode_label:after {
+  left: 40px;
+  transform: translateX(-100%);
+  background: linear-gradient(180deg, white, white);
+}
+.dark_mode_label:active:after {
+  width: 20px;
+}
+
+.dark_mode_label svg {
+  position: absolute;
+  width: 20px;
+  top: 5px;
+  z-index: 100;
+}
+.dark_mode_label svg.sun {
+  left: 5px;
+  fill: #fff;
+  transition: 0.3s;
+}
+.dark_mode_label svg.moon {
+  left: 40px;
+  fill: #7e7e7e;
+  transition: 0.3s;
+}
+.dark_mode_input:checked + .dark_mode_label svg.sun {
+  fill: #7e7e7e;
+}
+.dark_mode_input:checked + .dark_mode_label svg.moon {
+  fill: #fff;
 }
