--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,25 @@
+:root {
+  --body_background: white;  
+  --body_color: black;
+  --link_color: black;
+  --box_shadow: 4px 0 5px rgba(0, 0, 0, 0.4);
+  --color: black;
+}
+
+[data-theme="dark"]{
+  --body_background: #343434;
+  --body_color: white;
+  --link_color: white;
+  --box_shadow: 4px 0 5px rgba(0, 0, 0, 0.4);
+  --color: white;
+}
+
+* {
+  transition: all 0.0s ease-in-out;
+}
+
 body {
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
