--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,17 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-
 }
+
+.top_section svg{
+  cursor: pointer;
+}
+
 .container{
   display: flex;
 }
 main{
-  background-color: var(--body_bacground);
+  background-color: var(--body_background);
   width: 100%;
   padding: 20px;
   position: relative;
@@ -28,7 +32,8 @@ main{
 .sidebar{
   background-color: var(--body_background);
   color: var(--body_color);
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 250px;
   transition: all 0.5s;
   box-shadow: var(--box_shadow);
@@ -77,7 +82,6 @@ main{
   font-size: 20px;
   
 }
-
 /* DarkTheme*/
 
 .dark_mode {
@@ -149,7 +153,9 @@ main{
   fill: #fff;
 }
 
-.css-6od3lo-MuiChip-label{
+
+
+css-6od3lo-MuiChip-label{
   color: var(--color) !important;
 }
 
