--- a/src/style/css/agenda.css
+++ b/src/style/css/agenda.css
@@ -4,6 +4,7 @@
     --link_color: black;
     --box_shadow: 4px 0 5px rgba(0, 0, 0, 0.4);
     --color: black;
+    --border_color: black;
     --cor-do-botao-ativo: #00BFFF;
     --cor-do-botao-padrao: #ebebeb;
     --cor_background_div: #feea98;
@@ -17,12 +18,14 @@
     --link_color: white;
     --box_shadow: 4px 0 5px rgba(0, 0, 0, 0.4);
     --color: white;
+    --border_color: white;
     --cor-do-botao-ativo: #0000CD;
     --cor-do-botao-padrao: #75787e;
     --cor_background_div: #ceb930;
     --cor-do-botao-pressionado: #d0d0d0;
     --cor-do-botao-alternativo: white;
   }
+
 .css-17r3ykr .MainLayout-background {
     background-color: var(--body_background) !important;
     border-color: var(--border_color) !important;
@@ -53,6 +56,14 @@
 
 .css-vcheuy .Layout-cell{
     background-color: var(--body_background) !important;
+}
+
+label{
+    color: var(--color) !important;
+}
+.card-label{
+    background-color: var(--cor_background_div) !important;
+    color: var(--color) !important;
 }
 
 .css-1e41c9a-MuiTypography-root.TitleCell-title{
@@ -93,9 +104,36 @@
     color: var(--color) !important;
 }
 
+.error-paciente.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
+    
+    border-color: red !important;
+  }
+
+  .error-profissional.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
+    
+    border-color: red !important;
+  }
+
+  .error-consultorio.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
+    
+    border-color: red !important;
+  }
+
+  .error-dataConsulta.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
+    
+    border-color: red !important;
+  }
+
+  .error-horaInicio.MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
+    
+    border-color: red !important;
+  }
+
 .css-1d3z3hw-MuiOutlinedInput-notchedOutline{
     border-color: var(--border_color) !important;
 }
+
+
 
 .css-4t3x6l-MuiPaper-root-MuiDrawer-paper{
     background-color: var(--body_background) !important;
@@ -145,6 +183,8 @@
 .css-1sqnrkk-MuiInputBase-input-MuiOutlinedInput-input{
     color: var(--color) !important;
 }
+
+
 .barra_compromisso{
     background: var(--cor_background_div) !important;
 }
@@ -250,3 +290,203 @@
 .css-ol7wxs-MuiTypography-root{
     color: var(--color) !important;
 }
+
+.css-6od3lo-MuiChip-label{
+    color: var(--color) !important;
+}
+
+.titleForm{
+    color: var(--color) !important;
+}
+
+.css-1pk0x2n{
+    color: var(--color) !important;
+}
+
+.css-ahj2mt-MuiTypography-root{
+    color: var(--color) !important;
+}
+
+.css-vqmohf-MuiButtonBase-root-MuiRadio-root.Mui-checked{
+    color: var(--cor-do-botao-ativo) !important;
+}
+
+.css-vqmohf-MuiButtonBase-root-MuiRadio-root{
+    color: var(--color) !important;
+}
+
+.css-12tl3rr-MuiInputBase-input-MuiOutlinedInput-input{
+    color: var(--color) !important;
+}
+
+.css-1jq32hf-MuiButtonBase-root-MuiTab-root{
+    color: var(--color) !important;
+}
+
+.css-1jq32hf-MuiButtonBase-root-MuiTab-root.Mui-selected{
+    color: #2196f3 !important;
+}
+
+.css-4xx2wk{
+    background-color: #2e7d32 !important;
+}
+
+.css-8ludsl.Header-flexContainer{
+    background-color: var(--body_background) !important;
+}
+
+.css-11ngvp6.Content-content{
+    background-color: var(--body_background) !important;
+    color: var(--color) !important;
+}
+
+.css-11ngvp6 .Content-dateAndTitle{
+    color: var(--color) !important;
+}
+
+.css-1l9sosn-MuiButtonBase-root-MuiButton-root{
+    background-color: #9c27b0 !important;
+    color: white !important;
+}
+
+.css-1wy01w9 .Demo-closeButton{
+    color: var(--color) !important;
+}
+
+.css-bdhsul-MuiTypography-root-MuiDialogTitle-root{
+    background-color: var(--body_background) !important;
+    color: var(--color) !important;
+}
+
+.MuiDialogTitle-root+.css-ypiqx9-MuiDialogContent-root{
+    background-color: var(--body_background) !important;
+}
+
+.css-qfso29-MuiTypography-root-MuiDialogContentText-root{
+    color: var(--color) !important;
+}
+
+.css-knqc4i-MuiDialogActions-root{
+    background-color: var(--body_background) !important;
+    color: var(--color) !important;
+}
+
+.css-1rwt2y5-MuiButtonBase-root-MuiButton-root{
+    background-color: var(--cor-do-botao-padrao) !important;
+    border-color: var(--cor-do-botao-padrao) !important;
+    color:  var(--color) !important; 
+}
+
+.h3-title{
+    background-color: var(--body_background) !important;
+}
+
+.h3-title span{
+    color: var(--color) !important;
+}
+
+.card{
+    background-color: var(--body_background) !important;
+    color: var(--color) !important;
+}
+
+.css-1hju3x6-MuiPaper-root-MuiDialog-paper{
+    background-color: var(--body_background) !important;
+}
+
+.css-1e6y48t-MuiButtonBase-root-MuiButton-root{
+    color: var(--color) !important;
+    background-color: var(--cor-do-botao-padrao) !important;
+}
+
+.css-1xpw712-MuiButtonBase-root-MuiButton-root{
+    background-color: #2e7d32 !important;
+    color: white !important;
+}
+
+.css-10fi992-MuiButtonBase-root-MuiButton-root{
+    background-color: #d32f2f !important;
+    color: white !important;
+}
+
+.titleFormUsuario{
+    color: var(--color) !important;
+}
+
+.css-j204z7-MuiFormControlLabel-root{
+    color: var(--color) !important;
+    background-color: var(--body_background) !important;
+}
+
+.submit-modal{
+    background-color: #2e7d32 !important;
+}
+
+.css-uhtvcx-MuiAccordionDetails-root{
+    background-color: var(--body_background) !important;
+}
+
+.css-1pnmrwp-MuiTypography-root{
+    color: var(--color) !important;
+}
+
+.css-1ua80n0-MuiInputBase-input-MuiOutlinedInput-input:invalid{
+    color: var(--color) !important;
+}
+
+.css-1ua80n0-MuiInputBase-input-MuiOutlinedInput-input{
+    color: var(--color) !important;
+}
+
+.css-1x51dt5-MuiInputBase-input-MuiInput-input{
+    color: var(--color) !important;
+}
+
+.css-1mrv5kl.Title-title{
+    color: var(--color) !important;
+}
+
+.css-1qgma8u-MuiButtonBase-root-MuiTableSortLabel-root.Mui-active .MuiTableSortLabel-icon{
+    color: var(--color) !important;
+}
+
+.css-duoj8i-MuiTableCell-root .TableNoDataCell-text{
+    color: var(--color) !important;
+}
+
+.css-11awt6d.PageSizeSelector-pageSizeSelector{
+    color: var(--color) !important;
+}
+
+.css-1ar2bnf-MuiSelect-select-MuiInputBase-input-MuiInput-input.css-1ar2bnf-MuiSelect-select-MuiInputBase-input-MuiInput-input.css-1ar2bnf-MuiSelect-select-MuiInputBase-input-MuiInput-input{
+    color: var(--color) !important;
+}
+
+.css-1jwhnuz .Pagination-rowsLabel{
+    color: var(--color) !important;
+}
+
+.css-1jwgte0-MuiButtonBase-root-MuiButton-root.Pagination-text{
+    color: var(--color) !important;
+}
+
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root{
+    color: var(--color) !important;
+}
+
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected{
+    color: #1976d2 !important;
+}
+
+.css-yr8ao9-MuiInputBase-root-MuiInput-root:before{
+    border-bottom: 1px solid var(--color) !important;
+}
+
+.css-1vweko9-MuiSvgIcon-root-MuiTableSortLabel-icon:hover{
+    color: var(--color) !important;
+}
+
+.MuiInputBase-root .MuiOutlinedInput-root .MuiInputBase-colorPrimary .MuiInputBase-fullWidth .MuiInputBase-formControl .MuiInputBase-sizeSmall .css-md26zr-MuiInputBase-root-MuiOutlinedInput-root{
+    background-color: red !important;
+}
+
