--- a/src/style/css/login.css
+++ b/src/style/css/login.css
@@ -36,9 +36,9 @@ body, html {
 }
 
 .logo {
-  width: 60%; 
-  margin-top: -40px; 
-  margin-left: 83px;
+  width:  500px;
+  
+  margin-top: -90px; 
 }
 
 .imageFinanca {
