--- a/src/style/css/dashboard.css
+++ b/src/style/css/dashboard.css
@@ -1,6 +1,9 @@
 body{
     background-color: rgba(245, 245, 245, 0.822);
+    
 }
+
+
 
 .graficoSuperior{
     background-color: aqua;
@@ -15,30 +18,92 @@ body{
 }
 
 .grafico1{
-    width: 95%;
+    width: 100%;
     height: 10vh;
     padding-top: 1%;
+    font-size: 15px;
+    padding-right: 5%;
+}
+
+.grafico2{
+    width: 100%;
+    font-size: 15px;
+    height: 43vh;
+}
+
+.graficoPerformance{
+    width: 90%;
+    height: 90%;
 }
 
 .container1{
     background-color: rgb(255, 255, 255);
     width: 49%;
-    height: 41vh;
+    height: 44vh;
     border-radius: 10px;
-    box-shadow: 1px 1px 4px rgb(146, 146, 146);
+    box-shadow: 0px 0px 2px rgb(146, 146, 146);
 }
 
 .posGrafic2{
-    background-color:  rgba(245, 245, 245, 0.822);
+    background-color:  rgba(255, 255, 255, 0.822);
     height: 40vh;
     padding-top: 2%;
 }
 
+.posPerform{
+    display: flex;
+    justify-content: space-between;
+    gap: 2%;
+    height: 77vh;
+}
+
+.containerPerform{
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 2px rgb(146, 146, 146);
+}
+
+.testeGrafico{
+    width: 100%;
+    height: 100%;
+}
+
+.graficoPerformance{
+    width: 90%;
+    height: 50vh;
+    display: flex;
+    justify-content: space-around;
+}
+
 .container2{
     background-color: rgb(255, 255, 255);
-    height: 38vh;
+    width: 100%;
+    height: 40vh;
     border-radius: 10px;
-    box-shadow: 1px 1px 4px rgb(146, 146, 146);
+    box-shadow: 0px 0px 2px rgb(146, 146, 146);
+}
+
+.titulo{
+    padding-top: 1%;
+    font-weight: 700;
+    padding-left: 3%;
+    color: rgba(48, 48, 48, 0.679);
+}
+
+.titulo2{
+    padding-top: 1%;
+    font-weight: 700;
+    padding-left: 2%;
+    color: rgba(48, 48, 48, 0.679);
+}
+
+.tituloPerform{
+    font-weight: 700;
+    color: rgba(48, 48, 48, 0.679);
+    padding-left: 4%;
+    padding-top: 2%;
 }
 
 .Info{
@@ -47,8 +112,8 @@ body{
 }
 
 .iconsTop{
-    width: 32px;
-    height: 35px;
+    width: 42px;
+    height: 45px;
 }
 
 .infoAtraso{
@@ -62,12 +127,30 @@ body{
 .subInfo{
     display: flex;
     flex-direction: column;
-    
+    color: #605529;
+   
+}
 
+.valorAtraso{
+    color: rgb(235, 28, 28);
+    font-size: 21px;
+    font-weight: 700;
+}
+
+.valorOrcamento{
+    color: rgb(255, 179, 0);
+    font-size: 21px;
+    font-weight: 700;
+}
+
+.valorPaciente{
+    color: rgb(0, 121, 22);
+    font-size: 21px;
+    font-weight: 700;
 }
 
 .debitos{
-    font-size: 14px;
+    font-size: 19px;
 }
 
 
@@ -78,11 +161,497 @@ body{
 .header{
     display: flex;
     justify-content: space-around;
+    padding-top: 10px;
+    padding-bottom: 30px;
 
 }
 
 .iconPlan{
     width: 40px;
     height: 40px;
+    
+}
 
+.azul{
+    width: 17%;
+    height: 2%;
+    border-radius: 2px;
+    background-color: #0088FE;
+}
+
+.verde{
+    padding-right: 5%;
+    width: 15%;
+    height: 2%;
+    border-radius: 2px;
+    background-color: #00C49F;
+}
+
+.amarelo{
+    width: 15%;
+    max-height: 2%;
+    border-radius: 2px;
+    background-color: #FFBB28;
+}
+
+.laranja{
+    width: 15%;
+    height: 2%;
+    border-radius: 2px;
+    background-color: #FF8042;
+}
+
+.legenda{
+    width: 55%;
+    padding-top: 30%;
+
+}
+
+.posLegenda{
+    display: flex;
+    padding-bottom: 4%;
+}
+
+.posLegenda > h2{
+    width: 100%;
+    height: 100%;
+    padding-left: 5%;
+}
+
+
+.mainHomeRightbar{
+    flex: 4;
+    background-color: rgb(228, 228, 228);
+    max-width: 100%;
+    padding-bottom: 20px;
+    margin-left: 2px;
+    height: 570px;
+}
+
+.ItemContainer{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+}
+
+.ItemContainer1{
+    background-color: aliceblue;
+    width: 31%;
+    height: 230px !important;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 1%;
+    border-radius: 10px;
+    display: flex;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.MiddleTaskChart{
+    background-color: aliceblue;
+    width: 97%;
+    height: 11%;
+    margin-top: 1.2%;
+    margin-left: 0.3%;
+   
+    border-radius: 10px;
+    display: flex;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+.taskProgress{
+    text-align: left;
+    font-weight: 600;
+    width: 100%;
+    color: rgb(76, 77, 78);
+    font-size: 20px;
+    padding: 0;
+    margin: 0;
+}
+
+.taskCounter{
+    text-align: start;
+    font-size: 24px;
+    font-weight: 700;
+    margin-left: 10%;
+    
+    margin-bottom: 15%;
+    
+}
+
+.taskCounter2{
+    text-align: start;
+    font-size: 24px;
+    font-weight: 700;
+    margin-left: 10%;
+    margin-top:  5%;
+    color: #52bb7a;
+}
+
+.taskCounter3{
+    text-align: start;
+    font-size: 24px;
+    font-weight: 700;
+    margin-left: 10%;
+    margin-top: 5%;
+    color: #797979;
+}
+
+.currentmonth1{
+    text-align: start;
+    margin-left: 7%;
+    font-size: 12px; 
+
+}
+
+.barchartContainer{
+    display: flex;
+    margin-bottom: 2%;
+
+}
+
+.barchartContainer2{
+    margin-left: 1%;
+    margin-top: 2%;
+}
+
+.subitemContainer{
+    margin-top: -6px;
+    width: 100%;
+    height: 110%;
+}
+
+.TaskCreated{
+    font-weight: 600;
+    font-size: 18px;
+    padding-bottom: 6px;
+    color: rgb(76, 77, 78);
+    display: flex;
+    justify-content: center;
+    gap: 130px;
+    margin-bottom: 5px;
+}
+
+.chartTask{
+    padding-bottom: 2%;
+}
+
+.TasksContainer{
+    display: flex;
+    width: 97.4%;
+    justify-content: center;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 0.9%;
+    margin-bottom: 2%;
+}
+
+.TaskChart{
+    flex: 1.7;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    font-weight: 600;
+    margin: 0.2%;
+    padding-left: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.MonthlyEarning{
+    padding-right: 1%;
+    flex: 4;
+    background-color: aliceblue;
+    border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    font-weight: 600;
+    margin: 0.2%;
+    margin-left: 1%;
+}
+
+.taskContainerText1{
+    padding-top: 4.2%;
+    text-align: start;
+    padding-left: 2%;
+    color: rgb(76, 77, 78);
+}
+
+.taskContainerText{
+    padding-top: 2%;
+    text-align: start;
+    padding-left: 2%;
+    color: rgb(76, 77, 78);
+}
+
+
+
+.chartDirection{
+    
+    margin-top: 3%;
+    margin-bottom: 1%;
+
+    width: 100%;
+}
+
+.heightPie{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
+
+
+.box-pagar{
+    width: -moz-fit-content;
+    width: fit-content;
+    color: white;
+    text-align: right;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 95%;
+    font-weight: 700;
+    line-height: 1;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+    background-color: orange;
+    box-shadow: rgb(181, 111, 5) 0px 10px 13px -7px;
+}
+
+.box-pagar-small{
+    width: -moz-fit-content;
+    width: fit-content;
+    color: white;
+    text-align: right;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 65%;
+    font-weight: 700;
+    line-height: 1;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+    background-color: orange;
+    box-shadow: rgb(181, 111, 5) 0px 10px 13px -7px;
+}
+
+.box-pagar-semanal{
+    width: -moz-fit-content;
+    width: fit-content;
+    color: white;
+    text-align: right;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 95%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+    background-color: #ff5b57;
+    box-shadow: rgb(181, 40, 5) 0px 10px 13px -7px;
+}
+
+.box-pagar-anual{
+    width: -moz-fit-content;
+    width: fit-content;
+    color: white;
+    text-align: right;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 95%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+    background-color: #b1571f;
+    box-shadow: rgb(135, 85, 29) 0px 10px 13px -7px;
+}
+
+.box-pagar-mensal{
+    width: -moz-fit-content;
+    width: fit-content;
+    color: white;
+    text-align: right;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 95%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+    background-color: #2e88e8;
+    box-shadow: rgb(5, 43, 181) 0px 10px 13px -7px;
+}
+
+.mensal-right{
+    margin-right: 15px !important;
+}
+.box-receber{
+    width: -moz-fit-content;
+    width: fit-content;
+    color: white;
+    text-align: right;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 95%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+    background-color: #209f50;
+    box-shadow: rgb(30, 128, 25) 0px 10px 13px -7px;
+}
+.box-receber-small{
+    width: -moz-fit-content;
+    width: fit-content;
+    color: white;
+    text-align: right;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 65%;
+    font-weight: 700;
+    line-height: 1;
+    color: #fff;
+
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+    background-color: #209f50;
+    box-shadow: rgb(30, 128, 25) 0px 10px 13px -7px;
+}
+
+
+.subitemContainer-up{
+    display: flex;
+    align-items: center;
+    height: fit-content;
+    justify-content: space-around;
+    padding: 10px;
+    margin: 4px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.subitemContainer-down{
+    display: flex;
+    justify-content: space-between;
+    height: min-content;
+    padding-top: 20px;
+}
+
+.subitemContainer-down-child{
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    width: 100%;
+}
+
+.vencido-info{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.head-vencido{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.head-vencido-child{
+    width: 70px !important;
+}
+.vencido_h1{
+    text-align: left;
+    font-weight: 600;
+    width: fit-content;
+    color: rgb(76, 77, 78);
+    font-size: 20px;
+    padding-top: 9px !important;
+    padding-bottom: 9px !important;
+    padding-left: 12px !important;
+    padding: 0;
+    margin: 0;
+}
+
+.qnt_cr{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
+}
+.qnt_cr-down{
+    display: flex;
+    justify-content: space-between;
+}
+.actual-month{
+    padding-right: 10px;
+}
+
+.taskPie{
+    display: flex;
+    align-items: center;
+}
+
+.task{
+    display: flex;
+    align-items: last baseline;
+}
+
+.taskText{
+    text-align: start;
+    font-size: 24px;
+    font-weight: 700;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 0;
+}
+.taskRegister{
+    text-align: start;
+    font-size: 14px;
+    font-weight: 700;
+    margin-left: 3px;
+}
+
+.box-month{
+    width: -moz-fit-content;
+    width: fit-content;
+    text-align: right;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 95%;
+    font-weight: 700;
+    line-height: 1;
+    color: rgb(37, 36, 36);
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+    background-color: rgb(255, 237, 237);
+    box-shadow: rgb(216, 228, 215) 0px 10px 13px -7px;
+    border: 1px solid rgb(132, 130, 130);
+    margin-right: 14px;
+}
+
+.sino{
+    width: 26px;
+    height: 26px;
 }
